Use license files attribute

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = PySchoolBucks
 version = 0.1.0
 author = Andrew Lester
-license_file = file: LICENSE
+license_files = LICENSE
 description = Python wrapper for the MySchoolBucks Pay API
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -17,6 +17,8 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.8
+install_requires =
+    requests
 
 [options.packages.find]
 where = src
